--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -1,9 +1,6 @@
-<div class="container-fluid mapImg">
-  <div class="row py-5">&nbsp;</div>
-  <div class="row py-5">&nbsp;</div>
-  <div class="row py-5">&nbsp;</div>
-  <div class="row py-5">&nbsp;</div>
- <!-- <img src="assets/images/location.PNG" style="width:100%;filter: brightness(90%);"/> -->
+<div class="container-fluid">
+  <div class="row">  <iframe class="mapImg" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.508387643851!2d174.68454671540093!3d-36.9021073901993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d414a50be5cf7%3A0x2bfed5f010fe7dbe!2s25+Stock+St%2C+New+Lynn%2C+Auckland+0600!5e0!3m2!1sen!2snz!4v1552007978235" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
 </div>
 
 <div class="container-fluid">
@@ -16,10 +13,10 @@
         <div class="col-3"><i class="fab fa-facebook-square p-2 rounded"></i></div>
         <div class="col-3"><i class="fab fa-instagram p-2 rounded"></i></div>
       </div>
-      <div class="l2 mt-3 pb-3">Contact Info</div>
-      <div class="row py-2"> <div class="col-3"><img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;"></div><div class="col-9">25 stock street</div></div>
-      <div class="row py-2"><div class="col-3"><img src="../../../../assets/images/phoneIcon.png" alt="" style="height:25px;width:25px;"></div><div class="col-9">11122233456</div></div>
-      <div class="row py-2"><div class="col-3"> <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:25px;width:36px;"></div><div class="col-9">info@thebigletterco.com.au</div></div>
+      <div class="l2 mt-5 pb-3">Contact Info</div>
+      <div class="row py-2"> <div class="col-3"><img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;"></div><div class="col-9 s2">25 stock street</div></div>
+      <div class="row py-2"><div class="col-3"><img src="../../../../assets/images/phoneIcon.png" alt="" style="height:25px;width:25px;"></div><div class="col-9 s2">11122233456</div></div>
+      <div class="row py-2"><div class="col-3"> <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:25px;width:36px;"></div><div class="col-9 s2">info@thebigletterco.com.au</div></div>
     </div>
 
     <!-- form -->
@@ -116,6 +113,11 @@
     </div>
 
     </div>
+    
+    <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12761.502191643454!2d174.68451134999998!3d-36.9052843!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d46b52e8b4c95%3A0xe4725e971efeb23a!2sJetts+New+Lynn!5e0!3m2!1sen!2snz!4v1552007636187" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+
   </div>
   </div>
 
