--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -54,7 +54,7 @@
     </div>
     <div class="row justify-content-md-center my-3">
         <div class="col-12 text-center">
-          <button type="button" class="btn btn-outline-gold">View our products</button>
+          <button type="button" class="btn btn-outline-gold lspace-3">View our products</button>
         </div>
       </div>
     </div>
@@ -73,8 +73,10 @@
         ball, anniversary or any kind of party, Got It Covered has an extensive range of hire items that cater to a
         large range of styles and events.
       </div>
-      <br>
+      <div class="row"><div class="col-12 text-center">FOR MORE IMAGES OF OUR WORK VISIT THE GOT IT COVERED GALLERY</div></div>
+      <div class="row mb-5"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-4 lspace-3">View our work</button></div></div>
 
+      <!-- styling -->
       <div class="row">
           <div class="col-12 col-md-6" style="height:550px;">
             <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
@@ -91,6 +93,7 @@
           </div>
         </div>
     
+        <!-- CORPORATE EVENTS -->
         <div class="row mt-5">
             <div class="col-12 col-md-6 pt-4 order-1 order-md-0">
               <br><br>
@@ -133,8 +136,6 @@
                   </a>
               </div>
               <br> <br>
-              <div class="row"><div class="col-12 text-center">FOR MORE IMAGES OF OUR WORK VISIT THE GOT IT COVERED GALLERY</div></div>
-              <div class="row"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-5 lspace-3">View our products</button></div></div>
         </div>
       </div>
  </div>
