--- a/src/app/fcomponents/gallery/gallery.component.css
+++ b/src/app/fcomponents/gallery/gallery.component.css
@@ -8,7 +8,7 @@
     height:500px;
 }
 .gallaryBlocks{
-    background-image: url("../../../assets/images/productImg2.jpeg");
+    /* background-image: url("../../../assets/images/productImg2.jpeg"); */
     width: 100%;
     padding-bottom: 75%;
     background-size: cover;
