--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -6,19 +6,18 @@
   <!-- <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery1</div> <div class="col-12 col-md-6 egbg h480">Gallery2</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery3</div> <div class="col-12 col-md-6 egbg h480">Gallery4</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery5</div> <div class="col-12 col-md-6 egbg h480">Gallery6</div></div> -->
-  <div class="row l1 pb-30">
-    <div class="col-6"><div class="gallaryBlocks">Gallery1</div></div>
-    <div class="col-6"><div class="gallaryBlocks">Gallery2</div></div>
+  <div class="row j1">
+    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Gallery1</div></div>
+    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Gallery2</div></div>
   </div>
 
-  <div class="row l1 pb-30">
-      <div class="col-6"><div class="gallaryBlocks">Gallery3</div></div>
-      <div class="col-6"><div class="gallaryBlocks">Gallery4</div></div>
+  <div class="row j1">
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Gallery3</div></div>
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Gallery4</div></div>
     </div>
 
-  <div class="row l1 pb-30">
-      <div class="col-6"><div class="gallaryBlocks">Gallery5</div></div>
-      <div class="col-6"><div class="gallaryBlocks">Gallery6</div></div>
+  <div class="row j1">
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery5.jpg');">Gallery5</div></div>
 
   </div>
   </div>  
