--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
@@ -1,7 +1,6 @@
   <div class="container-fluid">
   <div class=" px-0 px-md-5 mx-2">
-    <br>
-    <div class="row text-center l1 my-3 pb-4"><div class="col-12">About Us</div> </div>
+    <div class="row text-center l1"><div class="col-12 my-5">About Us</div></div>
     <div class="s2">
       Here at The Big Letter Co. we add that much needed sparkle to your party or event. 
       Our stunning illuminated letters will bring a unique flair that will look fabulous in 
