--- a/src/app/fcomponents/gallery/gallery.component.css
+++ b/src/app/fcomponents/gallery/gallery.component.css
@@ -10,7 +10,7 @@
 .gallaryBlocks{
     /* background-image: url("../../../assets/images/productImg2.jpeg"); */
     width: 100%;
-    padding-bottom: 75%;
+    padding-top: 75%;
     background-size: cover;
     background-position: center;
     text-align: center;
