--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -1,23 +1,24 @@
 <div class="container-fluid">
   <div class="px-0 px-md-5 mx-2">
+
   <div class="row text-center l1">
-  <div class="col-12 mt-5"> Our Gallery</div>
-  </div><br/><br>
+  <div class="col-12 my-5"> Our Gallery</div>
+  </div>
   <!-- <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery1</div> <div class="col-12 col-md-6 egbg h480">Gallery2</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery3</div> <div class="col-12 col-md-6 egbg h480">Gallery4</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery5</div> <div class="col-12 col-md-6 egbg h480">Gallery6</div></div> -->
   <div class="row j1">
-    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Gallery1</div></div>
-    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Gallery2</div></div>
+    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Weddings</div></div>
+    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></div>
   </div>
 
   <div class="row j1">
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Gallery3</div></div>
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Gallery4</div></div>
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Grils Night</div></div>
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporte event</div></div>
     </div>
 
   <div class="row j1">
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery5.jpg');">Gallery5</div></div>
+      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery5.jpg');">Some Events</div></div>
 
   </div>
   </div>  
