--- a/src/app/fcomponents/products/productList/productList.component.css
+++ b/src/app/fcomponents/products/productList/productList.component.css
@@ -9,6 +9,12 @@ a{
     text-decoration: none;
     color: inherit;
 }
+a.dropdown-item{
+    cursor: pointer;
+}
+a.dropdown-item:hover{
+    background-color: #e7e9eb;
+}
 .btn.btn-secondary.dropdown-toggle{
     /* color: black; */
     background-color: transparent;
