--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+/* fonts start */
+
+/* font-family: 'Source Serif Pro', serif; */
 @font-face{
     font-family: Oxygen;
     src:url(assets/fonts/Oxygen-Regular.ttf) format("opentype");
 }
+
+/* font-family: 'GreatVibes', cursive; */
 @font-face{
     font-family: GreatVibes;
     src: url(assets/fonts/GreatVibes-Regular.ttf) format("opentype");
 }
+
+/* font-family: 'Source Serif Pro', serif; */
+@font-face{
+    font-family: SourceSerifPro;
+    src: url(assets/fonts/SourceSerifPro-Regular.ttf) format("opentype");
+}
+
+/* color */
 .gold{
     color:#c48f45
 }
-/* nav bar style start */
-/* https://stackoverflow.com/questions/18529274/change-navbar-color-in-twitter-bootstrap */
 
+/* nav bar style start */
  /* General Font style Section Start */
 .j1{
+    font-family: 'GreatVibes', cursive;
     font-size:4.5vw;
     font-weight: 700;
     color:white;
-    font-family: 'GreatVibes', cursive;
+    letter-spacing: 3px;
 }
 @media (max-width: 576px) {
     .j1{
@@ -33,77 +47,96 @@
 }
 
 .l0{
-    font-size: 50px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 52px;
     font-weight: 700;
     color:#363636;
+    letter-spacing: 3px;
 }
 .l1{
-    font-size: 40px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 42px;
     font-weight: 700;
     color:#363636;
+    letter-spacing: 3px;
 }
 .l2{
-    font-size: 30px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 32px;
     font-weight: 700;
     color:#363636;
+    letter-spacing: 3px;
 }
 .m1{
-    font-size:25px;
+    font-family: 'Source Serif Pro', serif;
+    font-size:27px;
     color:#525252;
     font-weight: 700;
 }
 .m2{
-    font-size:21px;
+    font-family: 'Source Serif Pro', serif;
+    font-size:23px;
     color:#525252;
     font-weight: 700;
 }
 .s1{
-    font-size:18px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 20px;
     color:#535353;
 }
 .s1gold{
-    font-size:18px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 20px;
     color:#c48f45;
 }
 .s1bold{
-    font-size:18px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 20px;
     color:#535353;
     font-weight: 700;
 }
 .s1goldbold{
+    font-family: 'Source Serif Pro', serif;
     color:#c48f45;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 700;
 
 }
 .s2{
-    font-size:15px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 17px;
     color:#535353;
 }
 .s2bold{
-    font-size:15px;
+    font-family: 'Source Serif Pro', serif;
+    font-size: 17px;
     color:#535353;
     font-weight: 700;
 }
 .s2gold{
+    font-family: 'Source Serif Pro', serif;
     color:#c48f45;
-    font-size: 15px;
+    font-size: 17px;
 }
 .s2goldbold{
+    font-family: 'Source Serif Pro', serif;
     color:#c48f45;
-    font-size: 15px;
+    font-size: 17px;
     font-weight: 700;
 }
 .s3{
-    font-size:10px;
+    font-family: 'Source Serif Pro', serif;
+    font-size:12px;
     color:#535353;
 }
 .s3gold{
-    font-size: 10px;
+    font-family: 'Source Serif Pro', serif;
+    font-size:12px;
     color:#c48f45;
 }
 .s3bold{
-    font-size:13px;
+    font-family: 'Source Serif Pro', serif;
+    font-size:12px;
     color:#4b4b4b;
     font-weight: 700;
 }
