--- a/src/app/fcomponents/gallery/gallery.component.html
+++ b/src/app/fcomponents/gallery/gallery.component.html
@@ -2,7 +2,7 @@
   <div class="px-0 px-md-5 mx-2">
 
   <div class="row text-center l1">
-  <div class="col-12 my-5"> Our Gallery</div>
+  <div class="col-12 my-2 my-md-5"> Our Gallery</div>
   </div>
   <!-- <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery1</div> <div class="col-12 col-md-6 egbg h480">Gallery2</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery3</div> <div class="col-12 col-md-6 egbg h480">Gallery4</div></div>
