--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -2,7 +2,7 @@
   <div class="px-0 px-md-5 mx-2">
 
     <!-- title -->
-    <div class="row py-5">
+    <div class="row py-2 py-md-5">
         <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'hire'">  Our Hires</div>
         <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'service'">  Our Services</div>
         <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'package'">  Our Packages</div>
