--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -1,5 +1,4 @@
-i
-{
+i{
     color: rgba(150, 150, 150, 0.89);
     font-size: 28px;
     cursor: pointer;
@@ -13,7 +12,6 @@ ul li a:hover{
 }
 .imgBlocks{
     width:100%;
-    /* height: 221px; */
     height:100%;
 }
 .fab.fa-facebook-square:hover{
@@ -35,4 +33,12 @@ a{
 }
 .contactUs i{
     font-size: 18px;
+}
+@media (max-width:767px) {
+    .col-6{
+        padding:5px;
+    }
+    .col-12{
+        padding:0px;
+    }
 }
