--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -14,9 +14,21 @@
         <div class="col-3"><i class="fab fa-instagram p-2 rounded"></i></div>
       </div>
       <div class="l2 mt-5 pb-3">Contact Info</div>
-      <div class="row py-2"> <div class="col-3"><img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;"></div><div class="col-9 s2">25 stock street</div></div>
-      <div class="row py-2"><div class="col-3"><img src="../../../../assets/images/phoneIcon.png" alt="" style="height:25px;width:25px;"></div><div class="col-9 s2">11122233456</div></div>
-      <div class="row py-2"><div class="col-3"> <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:25px;width:36px;"></div><div class="col-9 s2">info@thebigletterco.com.au</div></div>
+      <div class="row py-2"> 
+        <div class="col-12 s2">
+          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;25 stock street
+        </div>
+      </div>
+      <div class="row py-2">
+        <div class="col-12 s2">
+          <img src="../../../../assets/images/phoneIcon.png" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;11122233456
+        </div>
+      </div>
+      <div class="row py-2">
+        <div class="col-12 s2">
+          <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:20px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;info@thebigletterco.com.au
+        </div>
+      </div>
     </div>
 
     <!-- form -->
