--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -28,7 +28,7 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item pr-md-5">
-                <a class="nav-link s2bold" routerLink ='/gallery' routerLinkActive="active">Gallery</a>
+                <a class="nav-link s2bold" routerLink ='/galleries' routerLinkActive="active">Gallery</a>
             </li>
             <li class="nav-item pr-md-5">
                 <a class="nav-link s2bold" routerLink ='/aboutUs' routerLinkActive="active">About us</a>
