--- a/src/app/fcomponents/pages/homepage/homepage.component.css
+++ b/src/app/fcomponents/pages/homepage/homepage.component.css
@@ -13,7 +13,7 @@ ul li{
     margin-top:15px
 }
 .bgat{
-    background: url("../../../../assets/gallery/gallery3.jpg");
+    background: url("../../../../assets/gallery/gallerypexels1.jpeg");
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
