--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -14,9 +14,9 @@
     </div>
       <!-- imgs -->
     <div class="row  mx-0 mx-md-5">
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/about-us.jpg" alt=""></div>
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg3.png" alt=""></div>
-      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/productImg1.jpeg" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
+      <div class="col-6 col-md-4"><img  class ="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
       <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
 
@@ -51,7 +51,7 @@
             </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">wechatId</div></div>
+            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">Wechart: LuxeDreamEventHire</div></div>
           </li>
 
 
