--- a/src/app/fcomponents/gallery-list/gallery-list.component.html
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.html
@@ -8,8 +8,8 @@
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery3</div> <div class="col-12 col-md-6 egbg h480">Gallery4</div></div>
   <div class="row text-center l1 justify-content-center"> <div class="col-12 col-md-6 egbg h480">Gallery5</div> <div class="col-12 col-md-6 egbg h480">Gallery6</div></div> -->
   <div class="row j1">
-    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Weddings</div></div>
-    <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Weddings"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery1.jpg');">Weddings</div></a></div>
+    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Birthday"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></a></div>
   </div>
 
   <div class="row j1">
