--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -43,15 +43,15 @@
           </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">qwer@qwer.com</div></div>
+              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">yuxiaochen1987@outlook.com</div></div>
            </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-            <div class="row"><div class="col-2"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-10">25 Stock Street, New Lynn, Auckland</div></div>
+            <div class="row"><div class="col-2"><i class="fas fa-map-marker-alt mr-3"></i></div><div class="col-10">19 Hillside Rd, Wairau Valley, Auckland 0627</div></div>
             </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">Wechart: LuxeDreamEventHire</div></div>
+            <div class="row"><div class="col-2"><i class="fab fa-weixin mr-3"></i></div><div class="col-10">Wechat: LuxeDreamEventHire</div></div>
           </li>
 
 
