--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -10,13 +10,13 @@
         <!-- <div class="carousel-inner" style="height: 60vh"> -->
         <div class="carousel-inner" #imgScroll>
           <div class="carousel-item active h-100">
-            <img src="../../../../assets/images/focusimg1.jpeg" class="d-block w-100 img100" alt="..." >
+            <img src="../../../../assets/images/focusimg1.jpeg" class="d-block w-100 img100" alt="...">
           </div>
           <div class="carousel-item h-100">
-            <img src="../../../../assets/images/focusimg2.jpeg" class="d-block w-100 img100" alt="...">
+            <img src="../../../../assets/images/focusimg2.jpg" class="d-block w-100 img100" alt="...">
           </div>
           <div class="carousel-item h-100">
-            <img src="../../../../assets/images/focusimg3.jpeg" class="d-block w-100 img100" alt="...">
+            <img src="../../../../assets/images/focusimg3.jpg" class="d-block w-100 img100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
