--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -16,17 +16,17 @@
       <div class="l2 mt-5 pb-3">Contact Info</div>
       <div class="row py-2"> 
         <div class="col-12 s2">
-          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;25 stock street
+          <img src="../../../../assets/images/locationIcon.jpg" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;19 Hillside Rd, Wairau Valley, Auckland 0627
         </div>
       </div>
       <div class="row py-2">
         <div class="col-12 s2">
-          <img src="../../../../assets/images/phoneIcon.png" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;11122233456
+          <img src="../../../../assets/images/phoneIcon.png" alt="" style="height:26px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;02108547654
         </div>
       </div>
       <div class="row py-2">
         <div class="col-12 s2">
-          <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:20px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;info@thebigletterco.com.au
+          <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:20px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;yuxiaochen1987@outlook.com
         </div>
       </div>
     </div>
