--- a/src/app/fcomponents/gallery-list/gallery-list.component.html
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.html
@@ -13,13 +13,8 @@
   </div>
 
   <div class="row j1">
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Grils Night</div></div>
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporte event</div></div>
-    </div>
-
-  <div class="row j1">
-      <div class="col-12 col-md-6 pb-30"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery5.jpg');">Some Events</div></div>
-
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div></a></div>
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate Event</div></a></div>
   </div>
-  </div>  
+  </div>
 </div>
