--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -43,7 +43,7 @@
           </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
-              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">yuxiaochen1987@outlook.com</div></div>
+              <div class="row"><div class="col-2"><i class="far fa-envelope mr-3"></i></div><div class="col-10">luxedreameventhire@gmail.com</div></div>
            </li>
 
           <li class="mt-2 text-decoration-underline text-white-50">
