--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -10,13 +10,13 @@
         <!-- <div class="carousel-inner" style="height: 60vh"> -->
         <div class="carousel-inner" #imgScroll>
           <div class="carousel-item active h-100">
-            <img src="../../../../assets/images/focusimg1.jpeg" class="d-block w-100 img100" alt="...">
+            <img src="../../../../assets/images/homep1.jpg" class="d-block w-100 img100" alt="...">
           </div>
           <div class="carousel-item h-100">
-            <img src="../../../../assets/images/focusimg2.jpg" class="d-block w-100 img100" alt="...">
+            <img src="../../../../assets/images/homep2.jpg" class="d-block w-100 img100" alt="...">
           </div>
           <div class="carousel-item h-100">
-            <img src="../../../../assets/images/focusimg3.jpg" class="d-block w-100 img100" alt="...">
+            <img src="../../../../assets/images/homep3.jpg" class="d-block w-100 img100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -35,19 +35,19 @@
 <div class="hireCollection">
     <div class="text-center my-5 l2 lspace-3">Hire Specials</div>
     <div class="row">
-      <div class="col-6 col-md-3 "><img src="../../../../assets/images/focusimg4.jpeg" class="img100">
+      <div class="col-6 col-md-3 "><img src="../../../../assets/images/homep4.jpg" class="img100">
         <div class="s1">Oblong Trestle Tables</div>
         <div><span class="s2goldbold mr-3">$100</span><s>$120</s></div>
       </div>
-      <div class="col-6 col-md-3"><img src="../../../../assets/images/focusimg5.jpeg" class="img100">
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/homep5.jpg" class="img100">
         <div class="s1">Round Tables</div>
         <div><span class="s2goldbold mr-3">$100</span><s>$120</s></div>
       </div>
-      <div class="col-6 col-md-3"><img src="../../../../assets/images/focusimg6.jpeg" class="img100">
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/homep6.jpg" class="img100">
         <div class="s1">Round Tables</div>
         <div><span class="s2goldbold mr-3">$100</span><s>$120</s></div>
       </div>
-      <div class="col-6 col-md-3"><img src="../../../../assets/images/focusimg7.jpeg" class="img100">
+      <div class="col-6 col-md-3"><img src="../../../../assets/images/homep7.jpg" class="img100">
         <div  class="s1">Round Tables</div>
         <div><span class="s2goldbold mr-3">$100</span><s>$120</s></div>
       </div>
@@ -81,7 +81,7 @@
       <div class="row">
           <div class="col-12 col-md-6" style="height:550px;">
             <!-- <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"class=" d-block ml-auto " style="position: absolute;clip: rect(0px,auto,500px,0px);"> -->
-            <img src="../../../../assets/images/cebb995345f82a73cd0fea85a7bc899c.jpg"style="height:100%;width:100%;"/>
+            <img src="../../../../assets/images/homep8.jpg"style="height:100%;width:100%;"/>
             </div>
           <div class="col-12 col-md-6">
             <div class="d-none d-md-block"><br><br></div>
@@ -108,7 +108,7 @@
             </div>
             <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
               clip: rect(0px,auto,500px,0px);"></div> -->
-              <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg " style="height:100%;width:100%;"></div>
+              <div class="col-12 col-md-6 order-0 order-md-1" style="height:550px;"><img src="../../../../assets/images/homep9.jpg " style="height:100%;width:100%;"></div>
           </div>
       </div>
 
