--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="row">  <iframe class="mapImg" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3190.508387643851!2d174.68454671540093!3d-36.9021073901993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d414a50be5cf7%3A0x2bfed5f010fe7dbe!2s25+Stock+St%2C+New+Lynn%2C+Auckland+0600!5e0!3m2!1sen!2snz!4v1552007978235" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div class="row">  <iframe class="mapImg" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7880.475705276425!2d174.73684919358607!3d-36.77417950167517!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d399888fe1c79%3A0x939eff2509a7b5b9!2s19+Hillside+Rd%2C+Wairau+Valley%2C+Auckland+0627!5e0!3m2!1sen!2snz!4v1553138191305" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
 
