--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -85,7 +85,7 @@
             </div>
           <div class="col-12 col-md-6">
             <div class="d-none d-md-block"><br><br></div>
-            <div class="l2 mt-5 lspace-5">STYLING</div>
+            <div class="l2 mt-5 lspace-5">Styling</div>
             <div class="my-3 s2">Want a Pinterest worthy event but just not sure where to start or how to bring all the
               elements together to create a picture-perfect setting?<br/><br/>Got It Covered love to create incredible
               events that inspire and excite!
@@ -98,7 +98,7 @@
         <div class="row mt-5">
             <div class="col-12 col-md-6 pt-md-4 order-1 order-md-0">
             <div class="d-none d-md-block"><br><br></div>
-              <div class="l2 mt-5 lspace-5">CORPORATE EVENTS</div>
+              <div class="l2 mt-5 lspace-5">Events</div>
               <div class="my-3 s2">So you are planning a corporate event and need help with the styling and theming? Let us help
                 you create the wow factor and give your guests an event to remember!<br/><br/>From the smallest detail to the
                 grandest event, Got It Covered has set up and styled events in venues throughout the Nelson and Marlborough
