--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <!-- categories and search -->
-    <div class="row justify-content-center">
+    <div *ngIf="typeName == 'hire'" class="row justify-content-center">
         <div class="s1 border-bottom" style="padding:6px 0;">Categories:</div>
         <div class="col-8 col-md-4 p-0 border-bottom">
           <div class="dropdown">
