--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -58,8 +58,9 @@
         Quantity:<input type="number" [value] = "quantity"  min="1" max={{productDetail.availableStock}} [(ngModel)]="quantity">
         <span class="s3 pl-2"> (only {{productDetail.availableStock}} in stock)</span>
       </div>
-      <!-- <div class="col-4" *ngIf="inCart==1"><button class='btn btn_gold float-right' (click)="addToCart()">Add to cart</button></div> -->
-      <div class="col-4" *ngIf="inCart==1"><button class='btn btn_gold' routerLink='/shoppingCart'>Add To Cart</button></div>
+      <div class="col-4" *ngIf="inCart==1"><button class='btn btn_gold float-right' (click)="addToCart()">Add to cart</button></div>
+      <!-- <div class="col-4" *ngIf="inCart==1"><button class='btn btn_gold' routerLink='/shoppingCart'>Add To Cart</button></div> -->
+      <button class='btn btn_gold' routerLink='/shoppingCart'>Go To Cart</button>
     </div>
 
    </div>
