--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -8,12 +8,12 @@
       <div class="col-1 s2bold">Totally</div>
       <div class="col-2 s2bold text-center">Action</div>
   </div>
-  <div class="row mt-3">
+  <div class="row mt-3" *ngFor="let prod of prodsInCart">
       <div class="col-2"> <img src="../../../assets/images/productImg1.jpeg"></div>
-      <div class="col-4"><span class="m2">Illuminated LOVE</span></div>
-      <div class="col-2 ">$150</div>
-      <div class="col-1 ">3</div>
-      <div class="col-1 bg-gray">$450</div>
+      <div class="col-4"><span class="m2">{{prod.Title}}</span></div>
+      <div class="col-2 ">{{prod.Price}}</div>
+      <div class="col-1 ">{{prod.Quantity}}</div>
+      <div class="col-1 bg-gray">{{prod.Price}}</div>
       <div class="col-2 text-center">
           <div>Delete</div>
           <div>View Detail</div>
